--- a/flask_example/templates/layout.html
+++ b/flask_example/templates/layout.html
@@ -6,7 +6,7 @@
 <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
 <title>Flask Example</title>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="background-color: #f2f2f2;">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
